# rffl-boxscores

./: .cursor-rules  .env.example  .flake8  .gitignore  AGENTS.md  CLONE_GUIDE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  RFFL.md  ROADMAP.md  example_usage.py  missing_players.json  pyproject.toml  requirements.txt  setup.sh  team_mappings.json  test_2017_debug.csv  test_2017_with_team.csv  test_installation.py  transaction_data_audit_report.txt  transaction_matrix_2011-2018_summary.txt  vibe.sh
.github/workflows/: ci.yml
docs/: rffl-recipes-plan.md
project-health/: .gitignore  README.md  claude-sonnet-4-health-assessment-2025-01-07.md
project-health/consensus/: 2025-09-07_multi-ai-consensus-plan.md
project-health/reports/: 2025-09-07_claude-sonnet-4-v2_health-assessment.md  2025-09-07_claude-sonnet-4_health-assessment.md  2025-09-07_gpt4.1_health-assessment.md
project-health/templates/: consensus-template.md  health-assessment-template.md
rffl_boxscores/: __init__.py  cli.py
scripts/: apply_alias_mapping.py  audit_alias_coverage.py  audit_keepers.py  auto_commit.sh  build_live_view.py  build_team_mapping.py  cleanup_data.py  complete_rs_fields.py  fetch_team_info.py  fill_master_db.py  fill_master_ps.py  fill_master_rs.py  make_draft_snake.py  make_flat_index.py  make_h2h_teamweek.py  make_master_clean.py  make_teamweek_unified.py  normalize_season.py  organize_season_data.sh  safe_audit.sh  with_autocommit.sh
tests/: test_helpers.py
~/AI-Syntheses/: README.md
~/AI-Syntheses/syntheses/: synthesis_2025-09-09_192853_cli-script-naming-conventions.md
~/AI-Syntheses/templates/: synthesis_template.md
~/Knowledge-Library/: README.md
~/Knowledge-Library/knowledge-entries/: knowledge_2025-09-09_192853_cli-script-naming-conventions.md
~/Knowledge-Library/prompts/: README.md  save-ai-response-only.md  save-full-conversation.md
~/Knowledge-Library/templates/: knowledge_entry_template.md
